Fix service button Fix header overlap Fix textlink underline

--- a/src/modules/header/header.scss
+++ b/src/modules/header/header.scss
@@ -183,10 +183,6 @@ $headerCurves: (
     .mdl-header {
       background: $val;
 
-      &--fixed {
-        background: transparent;
-      }
-
       &__wrapper,
       &__functions {
         background: $val;
